syntax = "proto3"; // proto版本
option go_package = "../proto"; // package包名

// AES加密服务
service ServerAes {// 服务名
  rpc Encrypt (EncryptRequest) returns (EncryptResponse); // 加密
}

// AES加密的请求
message EncryptRequest {// 方法请求
  string base64_data = 1; // 要加密的数据，需要进行base64编码
}

// AES加密的响应
message EncryptResponse {// 方法响应
  string base64_encrypt = 1; // base64编码后的加密数据
}

